--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@
         position: absolute;
         top:100%;
         right: 0;
-        background-color: white;
+        background-color: rgba(255, 255, 255, 0.473);
         width: fit-content;
         max-height: 0;
         overflow: hidden;
